--- a/ui/packages/ui-components/package.json
+++ b/ui/packages/ui-components/package.json
@@ -54,10 +54,10 @@
     "devDependencies": {
         "@babel/core": "^7.11.1",
         "@stackrox/tailwind-config": "^0.1.0",
-        "@storybook/addon-actions": "^6.1.0-beta.1",
-        "@storybook/addon-essentials": "^6.1.0-beta.1",
-        "@storybook/addon-links": "^6.1.0-beta.1",
-        "@storybook/react": "^6.1.0-beta.1",
+        "@storybook/addon-actions": "^6.1.0",
+        "@storybook/addon-essentials": "^6.1.0",
+        "@storybook/addon-links": "^6.1.0",
+        "@storybook/react": "^6.1.0",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^10.4.9",
         "@types/lodash": "^4.14.165",
