--- a/ui/apps/platform/package.json
+++ b/ui/apps/platform/package.json
@@ -130,7 +130,7 @@
         "@testing-library/react-hooks": "^3.4.2",
         "@types/jest": "^26.0.15",
         "@types/lodash": "^4.14.165",
-        "@types/node": "^14.14.7",
+        "@types/node": "^14.14.9",
         "@types/react": "^16.9.56",
         "@types/react-dom": "^16.9.9",
         "cypress": "^5.0.0",
@@ -159,7 +159,7 @@
         "npm-run-all": "^4.1.5",
         "nyc": "^15.1.0",
         "postcss-cli": "^7.1.2",
-        "prettier": "2.1.2",
+        "prettier": "^2.2.0",
         "randomstring": "^1.1.5",
         "react-scripts": "^3.4.4",
         "react-test-renderer": "^17.0.1",
