Add Helm support for specifying a loadBalancerIP on installation (#6923)

--- a/image/templates/helm/stackrox-central/internal/config-shape.yaml
+++ b/image/templates/helm/stackrox-central/internal/config-shape.yaml
@@ -54,6 +54,7 @@ central:
     loadBalancer:
       enabled: null # bool
       port: null # int
+      ip: null # string
     nodePort:
       enabled: null # bool
       port: null # int
