--- a/image/templates/helm/stackrox-central/templates/01-central-14-exposure.yaml
+++ b/image/templates/helm/stackrox-central/templates/01-central-14-exposure.yaml
@@ -82,5 +82,8 @@ spec:
     targetPort: api
   selector:
     app: central
+{{- if ._rox.central.exposure.loadBalancer.ip }}
+  loadBalancerIP: {{ ._rox.central.exposure.loadBalancer.ip }}
+{{- end }}
 ---
 {{- end}}
