ROX-5974: Add feature flag for Network Detection UI (#6910)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2850,6 +2850,7 @@ jobs:
       - ROX_NETWORK_GRAPH_EXTERNAL_SRCS: true
       - ROX_CENTRAL_INSTALLATION_EXPERIENCE: true
       - ROX_SYSLOG_INTEGRATION: true
+      - ROX_NETWORK_DETECTION: true      
 
     steps:
       - checkout
@@ -3126,6 +3127,7 @@ jobs:
       - ROX_NETWORK_GRAPH_EXTERNAL_SRCS: true
       - ROX_CENTRAL_INSTALLATION_EXPERIENCE: true
       - ROX_SYSLOG_INTEGRATION: true
+      - ROX_NETWORK_DETECTION: true
 
     steps:
       - checkout
@@ -3193,6 +3195,7 @@ jobs:
       - ROX_NETWORK_GRAPH_EXTERNAL_SRCS: true
       - ROX_CENTRAL_INSTALLATION_EXPERIENCE: true
       - ROX_SYSLOG_INTEGRATION: true
+      - ROX_NETWORK_DETECTION: true
 
     steps:
       - run-qa-tests:
@@ -3218,6 +3221,7 @@ jobs:
       - ADMISSION_CONTROLLER: true
       - ADMISSION_CONTROLLER_UPDATES: true
       - ROX_SYSLOG_INTEGRATION: true
+      - ROX_NETWORK_DETECTION: true
 
     steps:
       - checkout
@@ -3248,6 +3252,7 @@ jobs:
       - ROX_NETWORK_GRAPH_PORTS: true
       - ROX_NETWORK_GRAPH_EXTERNAL_SRCS: true
       - ROX_SYSLOG_INTEGRATION: true
+      - ROX_NETWORK_DETECTION: true
 
     steps:
       - run-qa-tests:
@@ -3279,6 +3284,7 @@ jobs:
       - ROX_CENTRAL_INSTALLATION_EXPERIENCE: true
       - OUTPUT_FORMAT: helm
       - ROX_SYSLOG_INTEGRATION: true
+      - ROX_NETWORK_DETECTION: true
 
     steps:
       - run-qa-tests:
@@ -3814,6 +3820,7 @@ jobs:
       - ADMISSION_CONTROLLER_UPDATES: true
       - ROX_CENTRAL_INSTALLATION_EXPERIENCE: true
       - ROX_SYSLOG_INTEGRATION: true
+      - ROX_NETWORK_DETECTION: true
 
     steps:
       - run-openshift-tests:
@@ -3836,6 +3843,7 @@ jobs:
       - ADMISSION_CONTROLLER_UPDATES: true
       - ROX_CENTRAL_INSTALLATION_EXPERIENCE: true
       - ROX_SYSLOG_INTEGRATION: true
+      - ROX_NETWORK_DETECTION: true
 
     steps:
       - run-openshift-tests:
@@ -3855,6 +3863,7 @@ jobs:
       - ADMISSION_CONTROLLER: true
       - ADMISSION_CONTROLLER_UPDATES: true
       - ROX_SYSLOG_INTEGRATION: true
+      - ROX_NETWORK_DETECTION: true
 
     steps:
       - checkout
