ROX-5989 Multi-Namespace Support in Central Services Helm Chart (#6897)
Support deploying cental-services Helm chart into multiple namespaces by prefixing names of global resources.

--- a/image/templates/helm/stackrox-central/internal/config-shape.yaml
+++ b/image/templates/helm/stackrox-central/internal/config-shape.yaml
@@ -127,3 +127,4 @@ meta:
     overrideAPIResources: null # [string]
     extraAPIResources: null # [string]
   noCreateStorageClass: null # bool
+globalPrefix: null # string
