--- a/image/templates/helm/stackrox-central/templates/00-storage-class.yaml
+++ b/image/templates/helm/stackrox-central/templates/00-storage-class.yaml
@@ -4,12 +4,13 @@
 {{- if ._rox.central.persistence._pvcCfg.storageClass -}}
 {{- if eq ._rox.central.persistence._pvcCfg.storageClass "stackrox-gke-ssd" }}
 {{- $lookupOut := dict -}}
-{{- $_ := include "srox.safeLookup" (list . $lookupOut "storage.k8s.io/v1" "StorageClass" "" "stackrox-gke-ssd") -}}
+{{- $storageClassName := include "srox.globalResourceName" (list . "stackrox-gke-ssd") -}}
+{{- $_ := include "srox.safeLookup" (list . $lookupOut "storage.k8s.io/v1" "StorageClass" "" $storageClassName) -}}
 {{- if and (not $lookupOut.result) (or .Release.IsInstall $lookupOut.reliable) (not ._rox.meta.noCreateStorageClass) -}}
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: "stackrox-gke-ssd"
+  name: {{ $storageClassName }}
   labels:
     {{- include "srox.labels" (list . "storageclass" "stackrox-gke-ssd") | nindent 4 }}
   annotations:
