--- a/image/templates/helm/stackrox-central/templates/01-central-02-security.yaml
+++ b/image/templates/helm/stackrox-central/templates/01-central-02-security.yaml
@@ -3,7 +3,7 @@
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: stackrox-central-psp
+  name: {{ include "srox.globalResourceName" (list . "stackrox-central-psp") }}
   labels:
     {{- include "srox.labels" (list . "clusterrole" "stackrox-central-psp") | nindent 4 }}
   annotations:
@@ -14,7 +14,7 @@ rules:
     resources:
       - podsecuritypolicies
     resourceNames:
-      - stackrox-central
+      - {{ include "srox.globalResourceName" (list . "stackrox-central") }}
     verbs:
       - use
 ---
@@ -30,7 +30,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: stackrox-central-psp
+  name: {{ include "srox.globalResourceName" (list . "stackrox-central-psp") }}
 subjects:
   - kind: ServiceAccount
     name: central
@@ -39,7 +39,7 @@ subjects:
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
-  name: stackrox-central
+  name: {{ include "srox.globalResourceName" (list . "stackrox-central") }}
   labels:
     {{- include "srox.labels" (list . "podsecuritypolicy" "stackrox-central") | nindent 4 }}
   annotations:
@@ -83,7 +83,7 @@ spec:
 kind: SecurityContextConstraints
 apiVersion: security.openshift.io/v1
 metadata:
-  name: central
+  name: {{ include "srox.globalResourceName" (list . "central") }}
   labels:
     {{- include "srox.labels" (list . "securitycontextconstraints" "central") | nindent 4 }}
   annotations:
